--- a/resume.md.example
+++ b/resume.md.example
@@ -1,25 +1,22 @@
+# このファイルをコピーして resume.md を作成し、ご自身の情報に合わせて編集してください。
 ---
+# 基本情報
 name: "山田 太郎"
-birthday: "1990-01-01"
+birthday: "1990-01-01" # YYYY-MM-DD形式
 email: "taro.yamada@example.com"
-station: "東京駅"
-updated_at: "2025-07-15"
+station: "東京駅" # 最寄り駅
+updated_at: "2025-07-16" # YYYY-MM-DD形式。この書類の作成日
 ---
 
-# 職務経歴サマリー
-
-ここに職務経歴のサマリーを記述します。
-
-# スキル
-
-- Python
-- JavaScript
-- HTML/CSS
-
-# 職務経歴
-
-（詳細はプロジェクト一覧を参照）
+# 資格
+<!-- 保有資格を箇条書きで記載します -->
+- 応用情報技術者試験 (2022年取得)
+- AWS認定ソリューションアーキテクト – アソシエイト (2023年取得)
+- TOEIC L&R 860点 (2024年取得)
 
 # 自己PR
-
-ここに自己PRを記述します。
+<!-- これまでの経験やスキル、仕事への姿勢などを簡潔にまとめます -->
+Webアプリケーション開発を中心に5年以上の経験があり、特にバックエンドの設計・開発を得意としております。
+前職では、開発リーダーとしてAPIのパフォーマンス改善や開発プロセスの効率化を主導し、事業KPIの達成に貢献してまいりました。
+技術的な探求心が高く、常に新しい技術やアーキテクチャを学習し、チーム全体の生産性向上に繋げることを心がけております。
+今後は、これまでの経験を活かし、より大規模で挑戦的なプロジェクトに貢献したいと考えております。
