--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,6 +13,20 @@ FROM mcr.microsoft.com/vscode/devcontainers/python:0-${VARIANT}
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
 
-# Install Japanese fonts
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends fonts-noto-cjk
+# Install Japanese fonts and native libraries required by WeasyPrint
+RUN apt-get update \
+    && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get install -y --no-install-recommends \
+       fonts-noto-cjk \
+       libcairo2 libcairo2-dev \
+       libpango-1.0-0 libpangocairo-1.0-0 libpangoft2-1.0-0 \
+       libgdk-pixbuf2.0-0 \
+       libffi-dev \
+       python3-cffi python3-brotli \
+       shared-mime-info \
+    && rm -rf /var/lib/apt/lists/*
+
+# [Optional] If you have a requirements.txt, you can install Python dependencies here:
+# COPY requirements.txt /tmp/pip-tmp/
+# RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
+#    && rm -rf /tmp/pip-tmp
