--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 Brotli==1.1.0
+cffi==1.17.1
 cssselect2==0.8.0
 fonttools==4.58.5
+Jinja2==3.1.6
 Markdown==3.8.2
+MarkupSafe==3.0.2
 pillow==11.3.0
+pycparser==2.22
 pydyf==0.11.0
 pyphen==0.17.2
 python-dotenv==1.1.1
+PyYAML==6.0.2
+tinycss2==1.4.0
 tinyhtml5==2.0.0
 weasyprint==65.1
+webencodings==0.5.1
 zopfli==0.2.3.post1
